--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ blah, blah, blah, blah
 
 <body>
 <div id="header" class="w3-container w3-flat-carrot">
-	<h1>Hyper- or Hypo- thyroidism?</h1>
+	<h1>Hyper- or Hypo- Thyroidism?</h1>
 </div>
 	
 <div id="content" class="w3-container">
