--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@ blah, blah, blah, blah
 	
 	<div id="content" class="w3-container">
 		<p>Do you have a sudden burst of energy?</p>     <!--displays question-->
-		<a href="#two"  onclick="hypothyroidismAdd();" class="w3-btn w3-red w3-round-xxlarge">No</a> 
+		<a href="#three"  onclick="hypothyroidismAdd();" class="w3-btn w3-red w3-round-xxlarge">No</a> 
 	    <!--codes for button shape (rounded edges) and color (red); adds one to allergy if yes is clicked and one to cold if no is clicked-->
-		<a href="#two"  onclick="hyperthyroidismAdd();" class="w3-btn w3-red w3-round-xxlarge">Yes</a>
+		<a href="#three"  onclick="hyperthyroidismAdd();" class="w3-btn w3-red w3-round-xxlarge">Yes</a>
 	</div>
 
 <div class="page" id="three">
@@ -123,9 +123,9 @@ blah, blah, blah, blah
 	
 	<div id="content" class="w3-container">
 		<p>Do you have an increased appetite?</p>     <!--displays question-->
-		<a href="#two"  onclick="hypothyroidismAdd();" class="w3-btn w3-red w3-round-xxlarge">No</a> 
+		<a href="#four"  onclick="hypothyroidismAdd();" class="w3-btn w3-red w3-round-xxlarge">No</a> 
 	    <!--codes for button shape (rounded edges) and color (red); adds one to allergy if yes is clicked and one to cold if no is clicked-->
-		<a href="#two"  onclick="hyperthyroidismAdd();" class="w3-btn w3-red w3-round-xxlarge">Yes</a>
+		<a href="#four"  onclick="hyperthyroidismAdd();" class="w3-btn w3-red w3-round-xxlarge">Yes</a>
 	</div>
 	
 <div class="page" id="four">
@@ -135,14 +135,14 @@ blah, blah, blah, blah
 	
 	<div id="content" class="w3-container">
 		<p>Are you more irritable and have anxiety?</p>     <!--displays question-->
-		<a href="#two"  onclick="hyperthyroidismAdd();" class="w3-btn w3-red w3-round-xxlarge">Yes</a> 
+		<a href="#five"  onclick="hyperthyroidismAdd();" class="w3-btn w3-red w3-round-xxlarge">Yes</a> 
 	    <!--codes for button shape (rounded edges) and color (red); adds one to allergy if yes is clicked and one to cold if no is clicked-->
-		<a href="#two"  onclick="hypothyroidismAdd();" class="w3-btn w3-red w3-round-xxlarge">No</a>
+		<a href="#five"  onclick="hypothyroidismAdd();" class="w3-btn w3-red w3-round-xxlarge">No</a>
 		
 	</div>
 	<!--the final result-->
 	
-	<div class="page" id="four">
+	<div class="page" id="six">
 	<h1>Final Result</h1>
 	<!DOCTYPE html>
 <html>
