--- a/index.html
+++ b/index.html
@@ -159,6 +159,11 @@ blah, blah, blah, blah
 	
 </style>
  
+	 </div>
+	<div id="content" class="w3-container">
+		
+		<a href="#six"  onclick="results();" class="w3-btn w3-blue w3-round-xxlarge"> Show Results </a> 
+		<!--when button is clicked, results fuction runs and displays results on page six-->
 
 	<a href="#six"  onclick="results();" class="w3-btn w3-red w3-round-xxlarge"> Show Results </a> 
 	<!--when button is clicked, results fuction runs and displays results on page six-->
