--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@ blah, blah, blah, blah
 	    <!--codes for button shape (rounded edges) and color (red); adds one to allergy if yes is clicked and one to cold if no is clicked-->
 		<a href="#five"  onclick="hypothyroidismAdd();" class="w3-btn w3-red w3-round-xxlarge">No</a>
 		
+<div class="page" id="five">		
 	</div>
 	<!--the final result-->
 	
