--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Timothy Riedel
 triedel@utexas.edu
  
 Brief Description of Goal of Code:
-blah, blah, blah,
+Figure out if it's hypo- or hyper- thyroidism
  
 Known Issues:
 blah, blah, blah, blah
