--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ blah, blah, blah, blah
     	<div id="content" class="w3-container">
         <p>Are you experiencing rapid weight gain?</p>    <!--displays question-->
 		<a href="#two"  onclick="hypothyroidismAdd();" class="w3-btn w3-red w3-round-xxlarge">Yes</a> 
-	    <!--codes for button shape (rounded edges) and color (red); adds one to allergy if yes is clicked and one to cold if no is clicked-->
+	    <!--codes for button shape (rounded edges) and color (red); <!--adds to hypothyroidism if yes is clicked and one to hyperthyroidism if no is clicked-->
 		<a href="#two"  onclick="hyperthyroidismAdd();" class="w3-btn w3-red w3-round-xxlarge">No</a>
     	</div>
 </div>
@@ -121,7 +121,7 @@ blah, blah, blah, blah
 	<div id="content" class="w3-container">
 		<p>Do you have a sudden burst of energy?</p>     <!--displays question-->
 		<a href="#three"  onclick="hypothyroidismAdd();" class="w3-btn w3-red w3-round-xxlarge">No</a> 
-	    <!--codes for button shape (rounded edges) and color (red); adds one to allergy if yes is clicked and one to cold if no is clicked-->
+	    <!--codes for button shape (rounded edges) and color (red); <!--adds to hyperthyroidism if yes is clicked and one to hypothyroidism if no is clicked-->
 		<a href="#three"  onclick="hyperthyroidismAdd();" class="w3-btn w3-red w3-round-xxlarge">Yes</a>
 	</div>
 
@@ -133,7 +133,7 @@ blah, blah, blah, blah
 	<div id="content" class="w3-container">
 		<p>Do you have an increased appetite?</p>     <!--displays question-->
 		<a href="#four"  onclick="hypothyroidismAdd();" class="w3-btn w3-red w3-round-xxlarge">No</a> 
-	    <!--codes for button shape (rounded edges) and color (red); adds one to allergy if yes is clicked and one to cold if no is clicked-->
+	    <!--codes for button shape (rounded edges) and color (red); <!--adds to hypothyroidism if yes is clicked and one to hyperthyroidism if no is clicked-->
 		<a href="#four"  onclick="hyperthyroidismAdd();" class="w3-btn w3-red w3-round-xxlarge">Yes</a>
 	</div>
 	
@@ -145,7 +145,7 @@ blah, blah, blah, blah
 	<div id="content" class="w3-container">
 		<p>Are you more irritable and have anxiety?</p>     <!--displays question-->
 		<a href="#five"  onclick="hyperthyroidismAdd();" class="w3-btn w3-red w3-round-xxlarge">Yes</a> 
-	    <!--codes for button shape (rounded edges) and color (red); adds one to allergy if yes is clicked and one to cold if no is clicked-->
+	    <!--codes for button shape (rounded edges) and color (red); <!--adds to hypothyroidism if yes is clicked and one to hyperthyroidism if no is clicked-->
 		<a href="#five"  onclick="hypothyroidismAdd();" class="w3-btn w3-red w3-round-xxlarge">No</a>
 		
 <div class="page" id="five">		
