--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Brief Description of Goal of Code:
 Figure out if it's hypo- or hyper- thyroidism
  
 Known Issues:
-blah, blah, blah, blah
+None.
 -->
 
    <head> 
@@ -49,11 +49,11 @@ blah, blah, blah, blah
 
         function hypothyroidismAdd(){
             hypothyroidism_count = hypothyroidism_count + 1;
-		alert(hypothyroidism_count);
+		(hypothyroidism_count);          <!--remved the word "alert" so a pop up box doesn't come up-->
 
         }
 
-        function hyperthyroisismAdd(){
+        function hyperthyroidismAdd(){
             hypoerthyroidism_count = hyperthyroidism_count + 1;
         }
 
