--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ None.
 	</div>
 	<!--the final result-->
 	
-	<div class="page" id="six">
+	<div class="page" id="five">
 	<h1>Final Result</h1>
 	<!DOCTYPE html>
 <html>
@@ -165,8 +165,9 @@ None.
 	 </div>
 	<div id="content" class="w3-container">
 		
-		<a href="#six"  onclick="results();" class="w3-btn w3-blue w3-round-xxlarge"> Show Results </a> 
+		<a href="#six"  onclick="percentages();" class="w3-btn w3-blue w3-round-xxlarge"> Show Results </a> 
 		<!--when button is clicked, results fuction runs and displays results on page six-->
+		<p id="results"></p>   <!--prints final resultd-->
 
 	
 <footer class="w3-bottom w3-container w3-flat-carrot">
