--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.
 
  
 Authors in chronological order of contribution:
-Author 1
-Author 2
+Timothy Riedel
+Benita Thomas
  
 Further Information:
 http://diystream.cns.utexas.edu/
@@ -17,7 +17,7 @@ Timothy Riedel
 triedel@utexas.edu
  
 Brief Description of Goal of Code:
-Figure out if it's hypo- or hyper- thyroidism
+Figure out if the patient is showing symptoms of hypo- or hyper- thyroidism
  
 Known Issues:
 None.
