--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Timothy Riedel
 triedel@utexas.edu
  
 Brief Description of Goal of Code:
-Figure out if the patient is showing symptoms of hypo- or hyper- thyroidism
+Figure out if the patient is showing symptoms of hyper- or hypo- thyroidism
  
 Known Issues:
 None.
@@ -34,8 +34,8 @@ None.
 
 
 <script>
-        var multiple_count = 0;  //counter to measure MS clicks
-        var fibro_count = 0;  //counter to measure fibromyalgia clicks
+        var hyper_count = 0;  //counter to measure hyperthyroidism clicks
+        var hypo_count = 0;  //counter to measure hypothyroidism clicks
 	var docMod = document.lastModified;
         alert("This file last modified  " + docMod);
         console.log("This file last modified  " + docMod);
