--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@ None.
 	</div>
 	
 	<div id="content" class="w3-container">
-	<p>Are you experiencing fatigue or exhaustion?</p>  <!-- prints the question to the user -->
-	<a href="#three"  onclick="fibroAdd();" class="w3-btn w3-black"> Yes</a>  <!-- when clicked, adds to the fibro count and then directs to next page --> 
-        <a href="#three"  onclick="multipleAdd();" class="w3-btn w3-black">No</a>  <!-- when clicked, adds to the MS count and then directs to next page --> 
+	<p>Do you have sudden bursts of energy?</p>  <!-- prints the question to the user -->
+	<a href="#three"  onclick="hyperAdd();" class="w3-btn w3-black"> Yes</a>  <!-- when clicked, adds to the hyper count and then directs to next page --> 
+        <a href="#three"  onclick="hypoAdd();" class="w3-btn w3-black">No</a>  <!-- when clicked, adds to the hypo count and then directs to next page --> 
 	</div><!-- /content -->
 	
 </div>
