--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ None.
 </div>
 	
 <div id="content" class="w3-container">
-	<p>Are you feeling a change in energy and fluctuating with weight and metabolism? Answer a few short questions to find out!</p>
+	<p>Are you feeling multiple changes within your body, but don't know if it's hyper- or hypo- thyroidism? Answer a few short questions to find out!</p>
 	<img src="https://thumbs.dreamstime.com/z/comparison-difference-hyperthyroidism-hypothyroidism-thyroid-gland-disorder-comparison-difference-211675422.jpg" alt="Hyper- or Hypo- Thyroidism">
 	
 	
@@ -139,9 +139,9 @@ None.
 	</div>
 	
 	<div id="content" class="w3-container">
-	<p>Do you notice a decrease in attention span and memory capacity?</p>  <!-- prints the question to the user -->    
-	<a href="#four"  onclick="fibroAdd();" class="w3-btn w3-black"> Yes</a>  <!-- when clicked, adds to the fibromyalgia count and then directs to next page --> 
-        <a href="#four"  onclick="multipleAdd();" class="w3-btn w3-black">No</a>  <!-- when clicked, adds to the MS count and then directs to next page --> 
+	<p>Do you have an increased appetite?</p>  <!-- prints the question to the user -->    
+	<a href="#four"  onclick="hyperAdd();" class="w3-btn w3-black"> Yes</a>  <!-- when clicked, adds to the hyper count and then directs to next page --> 
+        <a href="#four"  onclick="hypoAdd();" class="w3-btn w3-black">No</a>  <!-- when clicked, adds to the hypo count and then directs to next page --> 
 	</div><!-- /content -->
 	
 </div>	
