--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@ None.
 	</div>
 	
 	<div id="content" class="w3-container">
-	<p>Do you have difficulties with vision?</p>  <!-- prints the question to the user -->    
-	<a href="#results"  onclick="multipleAdd();" class="w3-btn w3-black"> Yes</a>  <!-- when clicked, adds to the MS count and then directs to next page --> 
-        <a href="#results"  onclick="fibroAdd();" class="w3-btn w3-black">No</a>  <!-- when clicked, adds to the fibromyalgia count and then directs to next page --> 
+	<p>Are you more irritable?</p>  <!-- prints the question to the user -->    
+	<a href="#results"  onclick="hyperAdd();" class="w3-btn w3-black"> Yes</a>  <!-- when clicked, adds to the hyper count and then directs to next page --> 
+        <a href="#results"  onclick="hypooAdd();" class="w3-btn w3-black">No</a>  <!-- when clicked, adds to the hypo count and then directs to next page --> 
 	</div><!-- /content -->
 	
 </div>	
